--- a/index.html
+++ b/index.html
@@ -5,36 +5,73 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WebStudio</title>
-    <link rel="stylesheet" href="./css/style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:wght@700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:wght@700&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
+    <!-- HEADER -->
+
     <header class="header">
       <nav class="header-navigation">
-        <a class="header-logo" href="./index.html"><span class="header-logo-color">Web</span>Studio</a>
-         <ul class="header-menu-list">
-          <li class="header-menu-item"><a class="header-menu-link" href="Studio">Studio</a></li>
-          <li class="header-menu-item"><a class="header-menu-link" href="Portfolio">Portfolio</a></li>
-          <li class="header-menu-item"><a class="header-menu-link" href="Contacts">Contacts</a></li>
+        <a class="header-logo" href="./index.html"
+          >Web<span class="header-logo-color">Studio</span></a
+        >
+        <ul class="header-menu-list">
+          <li class="header-menu-item">
+            <a class="header-menu-link" href="" class="hover-focus-color"
+              >Studio</a
+            >
+          </li>
+          <li class="header-menu-item">
+            <a class="header-menu-link" href="" class="hover-focus-color"
+              >Portfolio</a
+            >
+          </li>
+          <li class="header-menu-item">
+            <a class="header-menu-link" href="" class="hover-focus-color"
+              >Contacts</a
+            >
+          </li>
         </ul>
       </nav>
-      <address>
-        <ul class="header-address">
-          <li class="header-address-item"><a class="header-address-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+      <address class="header-address">
+        <ul class="header-address-list">
+          <li class="header-address-item">
+            <a class="header-address-link" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
+          </li>
 
-          <li class="header-address-item"><a class="header-address-link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+          <li class="header-address-item">
+            <a class="header-address-link" href="tel:+110001111111"
+              >+11 (000) 111-11-11</a
+            >
+          </li>
         </ul>
       </address>
     </header>
 
+    <!-- MAIN -->
+
     <main>
-      <section>
+      <!-- HERO -->
+
+      <section class="hero">
         <h1 class="hero-title">Effective Solutions for Your Business</h1>
         <button class="hero-btn" type="button">Order Service</button>
       </section>
+
+      <!-- FEATURE -->
+
       <section class="feature">
         <h2 hidden>features</h2>
         <ul class="feature-list">
@@ -68,21 +105,26 @@
           </li>
         </ul>
       </section>
+
+      <!-- TEAM -->
+
       <section class="team">
         <h2 class="team-title">Our Team</h2>
         <ul class="team-list">
           <li>
-             <img
+            <img
+              class="team-images"
               src="./images/mark_guerrero.jpg"
               alt="mark_guerrero"
               width="264"
               height="260"
             />
-          </li>
-          <h3 class="team-subtitle">Mark Guerrero</h3>
+            <h3 class="team-subtitle">Mark Guerrero</h3>
             <p class="team-text">Product Designer</p>
+          </li>
           <li>
             <img
+              class="team-images"
               src="./images/tom_ford.jpg"
               alt="tom_ford"
               width="264"
@@ -93,6 +135,7 @@
           </li>
           <li>
             <img
+              class="team-images"
               src="./images/camila_garcia.jpg"
               alt="camila_garcia"
               width="264"
@@ -103,6 +146,7 @@
           </li>
           <li>
             <img
+              class="team-images"
               src="./images/daniel_wilson.jpg"
               alt="daniel_wilson"
               width="264"
@@ -113,87 +157,82 @@
           </li>
         </ul>
       </section>
-      <section>
+
+      <!-- PORTFOLIO -->
+
+      <section class="portfolio">
         <h2 class="portfolio-title">Our Portfolio</h2>
         <ul class="portfolio-list">
-            <li>
-                <a>
-                  <img
-                    src="./images/banking-app.jpg"
-                    alt="banking-app"
-                    width="360"
-                    height="300"
-                  />
-                  <h3 class="portfolio-subtitle">Banking App Interface Concept</h3>
-                  <p class="portfolio-text">App</p>
-                </a>
-              </li>
-              <li>
-                <a>
-                  <img
-                    src="./images/cashless-payment.jpg"
-                    alt="cashless-payment"
-                    width="360"
-                    height="300"
-                  />
-                  <h3 class="portfolio-subtitle">Cashless Payment</h3>
-                  <p class="portfolio-text">Marketing</p></a
-                >
-              </li>
-              <li>
-                <a>
-                  <img
-                    src="./images/meditation-app.jpg"
-                    alt="meditation-app"
-                    width="360"
-                    height="300"
-                  />
-                  <h3 class="portfolio-subtitle">Meditation App</h3>
-                  <p class="portfolio-text">App</p></a
-                >
-              </li>
-              <li>
-                <a>
-                  <img
-                    src="./images/taxi-service.jpg"
-                    alt="taxi-service"
-                    width="360"
-                    height="300"
-                  />
-                  <h3 class="portfolio-subtitle">Taxi Service</h3>
-                  <p class="portfolio-text">Marketing</p></a
-                >
-              </li>
-              <li>
-                <a>
-                  <img
-                    src="./images/screen-illustrations.jpg"
-                    alt="screen-illustrations"
-                    width="360"
-                    height="300"
-                  />
-                  <h3 class="portfolio-subtitle">Screen Illustrations</h3>
-                  <p class="portfolio-text">Design</p></a
-                >
-              </li>
-              <li>
-                <a>
-                  <img
-                    src="./images/online-courses.jpg"
-                    alt="online-courses"
-                    width="360"
-                    height="300"
-                  />
-                  <h3 class="portfolio-subtitle">Online Courses</h3>
-                  <p class="portfolio-text">Marketing</p></a
-                >
-              </li>
-    
+          <li>
+            <img
+              src="./images/banking-app.jpg"
+              alt="banking-app"
+              width="360"
+              height="300"
+            />
+            <h3 class="portfolio-subtitle">Banking App Interface Concept</h3>
+            <p class="portfolio-text">App</p>
+          </li>
+          <li>
+            <img
+              src="./images/cashless-payment.jpg"
+              alt="cashless-payment"
+              width="360"
+              height="300"
+            />
+            <h3 class="portfolio-subtitle">Cashless Payment</h3>
+            <p class="portfolio-text">Marketing</p>
+          </li>
+          <li>
+            <img
+              src="./images/meditation-app.jpg"
+              alt="meditation-app"
+              width="360"
+              height="300"
+            />
+            <h3 class="portfolio-subtitle">Meditation App</h3>
+            <p class="portfolio-text">App</p>
+          </li>
+          <li>
+            <img
+              src="./images/taxi-service.jpg"
+              alt="taxi-service"
+              width="360"
+              height="300"
+            />
+            <h3 class="portfolio-subtitle">Taxi Service</h3>
+            <p class="portfolio-text">Marketing</p>
+          </li>
+          <li>
+            <img
+              src="./images/screen-illustrations.jpg"
+              alt="screen-illustrations"
+              width="360"
+              height="300"
+            />
+            <h3 class="portfolio-subtitle">Screen Illustrations</h3>
+            <p class="portfolio-text">Design</p>
+          </li>
+          <li>
+            <img
+              src="./images/online-courses.jpg"
+              alt="online-courses"
+              width="360"
+              height="300"
+            />
+            <h3 class="portfolio-subtitle">Online Courses</h3>
+            <p class="portfolio-text">Marketing</p>
+          </li>
         </ul>
       </section>
     </main>
-    <footer>
-      <a class="footer-logo" href="./index.html">WebStudio</a>
+
+    <!-- FOOTER -->
+
+    <footer class="footer">
+      <a class="footer-logo" href="./index.html"
+        >Web<span class="footer-logo-color">Studio</span></a
+      >
 
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
