--- a/index.html
+++ b/index.html
@@ -27,19 +27,13 @@
         >
         <ul class="header-menu-list">
           <li class="header-menu-item">
-            <a class="header-menu-link" href="" class="hover-focus-color"
-              >Studio</a
-            >
+            <a class="header-menu-link" href="">Studio</a>
           </li>
           <li class="header-menu-item">
-            <a class="header-menu-link" href="" class="hover-focus-color"
-              >Portfolio</a
-            >
+            <a class="header-menu-link" href="">Portfolio</a>
           </li>
           <li class="header-menu-item">
-            <a class="header-menu-link" href="" class="hover-focus-color"
-              >Contacts</a
-            >
+            <a class="header-menu-link" href="">Contacts</a>
           </li>
         </ul>
       </nav>
@@ -110,8 +104,8 @@
 
       <section class="team">
         <h2 class="team-title">Our Team</h2>
-        <ul class="team-list">
-          <li>
+        <ul>
+          <li class="team-list">
             <img
               class="team-images"
               src="./images/mark_guerrero.jpg"
@@ -122,7 +116,7 @@
             <h3 class="team-subtitle">Mark Guerrero</h3>
             <p class="team-text">Product Designer</p>
           </li>
-          <li>
+          <li class="team-list">
             <img
               class="team-images"
               src="./images/tom_ford.jpg"
@@ -133,7 +127,7 @@
             <h3 class="team-subtitle">Tom Ford</h3>
             <p class="team-text">Frontend Developer</p>
           </li>
-          <li>
+          <li class="team-list">
             <img
               class="team-images"
               src="./images/camila_garcia.jpg"
@@ -144,7 +138,7 @@
             <h3 class="team-subtitle">Camila Garcia</h3>
             <p class="team-text">Marketing</p>
           </li>
-          <li>
+          <li class="team-list">
             <img
               class="team-images"
               src="./images/daniel_wilson.jpg"
@@ -170,7 +164,7 @@
               width="360"
               height="300"
             />
-            <h3 class="portfolio-subtitle">Banking App Interface Concept</h3>
+            <h3 class="portfolio-subtitle">Banking App</h3>
             <p class="portfolio-text">App</p>
           </li>
           <li>
