--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         >
         <ul class="header-menu-list">
           <li class="header-menu-item">
-            <a class="header-menu-link" href="">Studio</a>
+            <a href="./index.html" class="header-menu-link">Studio</a>
           </li>
           <li class="header-menu-item">
             <a class="header-menu-link" href="">Portfolio</a>
